# R-Type

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  CPackConfig.cmake  CPackSourceConfig.cmake  Dockerfile  Doxyfile  LICENSE  MacOS_installer.sh  Makefile  README.md  annotated.html  annotated_dup.js  classes.html  cmake_install.cmake  conanfile.txt  dir_075bb3ff235063c77951cd176d15a741.html  dir_075bb3ff235063c77951cd176d15a741.js  dir_155161e0c8cfdaae2d7844c5a5967093.html  dir_155161e0c8cfdaae2d7844c5a5967093.js  dir_4c001e8a340c2d5bea97fc32497817f4.html  dir_4c001e8a340c2d5bea97fc32497817f4.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_6908ff505388a07996d238c763adbdab.html  dir_6908ff505388a07996d238c763adbdab.js  dir_6bcfdd31f9563448e6ebf134f82ec433.html  dir_6bcfdd31f9563448e6ebf134f82ec433.js  dir_740de58a31a4e039f32ebfc0184eed01.html  dir_740de58a31a4e039f32ebfc0184eed01.js  dir_a52f4d3d586a58b02f3a4ddf0a992157.html  dir_ad0530cb1f8052897640e112eb83a9d7.html  dir_b0ccf9fd37b047266b8dc6b1d4d4ce05.html  dir_b0ccf9fd37b047266b8dc6b1d4d4ce05.js  dir_b1a122bf62c958266ec5bf64d14fde5a.html  dir_b1a122bf62c958266ec5bf64d14fde5a.js  dir_ba210d1fa67db7bee1bb22e0a3c11d9f.html  (+60 more)
.github/ISSUE_TEMPLATE/: Component.md  Entity.md  System.md  empty.md  read_packet_client.md  read_packet_server copy.md
.github/PULL_REQUEST_TEMPLATE/: closing_issue.md
.github/workflows/: build.yml  codeql-analysis.yml  documentation.yml  formatter.yml  lint.yml  mirror.yml  release.yml
cmake/: FindCriterion.cmake
d0/d06/: TextComponent_8hpp.html  TextComponent_8hpp_source.html
d0/d12/: structDrawableComponent.html  structDrawableComponent.js
d0/d17/: ResourcesManager_8hpp.html  ResourcesManager_8hpp_source.html  structstat__bonus__s-members.html
d0/d1d/: GameTeamComponent_8hpp.html  GameTeamComponent_8hpp.js  GameTeamComponent_8hpp_source.html
d0/d4e/: structSpeedComponent-members.html
d0/d8d/: IASystem_8cpp.html  IASystem_8cpp.js
d0/da2/: structbonus__s.html  structbonus__s.js
d0/dbb/: World_8hpp.html  World_8hpp_source.html
d0/dc4/: Game_8cpp.html  (+1 more)
dependencies/: CMakeLists.txt  Makefile  cmake_install.cmake
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  (+82 more)
src/: CMakeLists.txt  Makefile  cmake_install.cmake
src/Common/: CMakeLists.txt  locked_queue.h  locked_queue.hpp
src/Common/Message/: CMakeLists.txt  Message.h  Message.hpp  MessageHeader.h  MessageHeader.hpp  MessageType.h  MessageType.hpp
src/ECS/: CMakeLists.txt  Entity.h  Entity.hpp  Input.hpp  Registry.hpp  ResourcesManager.cpp  ResourcesManager.hpp  RessourcesManager.hpp  SparseArray.hpp  World.cpp  World.hpp  registry.h  sparse_array.h
src/ECS/Components/: AccelerationComponent.h  AccelerationComponent.hpp  AllComponents.hpp  AnimationComponent.hpp  BonusComponent.hpp  CMakeLists.txt  ClickableComponent.hpp  ClientIDComponent.hpp  CollideComponent.h  CollideComponent.hpp  ControllableComponent.hpp  DestroyableComponent.hpp  DoubleLaserComponent.hpp  DrawableComponent.h  DrawableComponent.hpp  EntityIDComponent.hpp  GameObjectComponent.hpp  GameTeamComponent.hpp  HealthComponent.h  HealthComponent.hpp  ImmobileComponent.hpp  LevelComponent.hpp  MaximumVelocityComponent.h  MaximumVelocityComponent.hpp  PositionComponent.hpp  ShapeComponent.hpp  SoundEffectComponent.hpp  SpeedComponent.hpp  TextComponent.hpp  VelocityComponent.h  VelocityComponent.hpp  WeaponComponent.h  WeaponComponent.hpp
src/ECS/Systems/: AllSystem.hpp  CMakeLists.txt  ClickableSystem.cpp  CollideSystem.cpp  ControllableSystem.cpp  DrawableSystem.cpp  MusicSystem.cpp  ShootingSystem.cpp  VelocitySystem.cpp  WaveSystem.cpp
src/client/: CMakeLists.txt  Makefile  client.cpp  client.h  client.hpp  cmake_install.cmake  handle_movement.cpp  main.cpp  new_entity.cpp  proto.hpp
src/client/RTypeBootstrap/: AssetsManager.hpp  CMakeLists.txt  Entity.h  Input.hpp  RTypeBootstrap.cpp  RTypeBootstrap.h  registry.h  sparse_array.h
src/client/RTypeBootstrap/Components/: AccelerationComponent.h  ControllableComponent.h  DestroyableComponent.hpp  DrawableComponent.h  HealthComponent.h  HitBoxComponent.h  ImmobileComponent.h  MaximumVelocityComponent.h  PositionComponent.h  ShapeComponent.hpp  VelocityComponent.h  WeaponComponent.h
src/client/RTypeBootstrap/Systems/: CollideSystem.cpp  ControllableSystem.cpp  DrawableSystem.cpp  InputSystem.cpp  ShootingSystem.cpp  VelocitySystem.cpp
src/client/scene/: Scene.hpp
src/client/scene/callback/: AllCallback.hpp  callback.cpp
src/client/scene/end_game/: EndGame.cpp  EndGame.hpp
src/client/scene/game/: Game.cpp  Game.hpp
src/client/scene/lobby/: Lobby.cpp  Lobby.hpp
src/client/scene/menu/: Menu.cpp  Menu.hpp
src/client/scene/menu/callback/: AllCallback.hpp  callback.cpp
src/client/scene/option/: Option.cpp  Option.hpp
src/server/: AISystem.cpp  BonusSystem.cpp  CMakeCache.txt  CMakeLists.txt  CollideSystem.cpp  DestroyOutdatedEntities.cpp  EndGameSystem.cpp  GameStates.hpp  IASystem.cpp  LevelUpSystem.cpp  LobbySystem.cpp  Makefile  Package.hpp  RefreshSystem.cpp  ShootingSystem.cpp  WaveSystem.cpp  bytes.cpp  create_packet.cpp  game.hpp  handle_packets.cpp  loop.cpp  main.cpp  main2.cpp  send_packet.cpp  send_stats_to_players.cpp  server.cpp  server.hpp  stat_up.cpp  string2hex.cpp  thread.cpp  thread.hpp  utils.hpp
src/server/Package/: APackage.hpp  CMakeLists.txt  IPackage.hpp  InterfacePackage.hpp  Package.hpp
src/server/Package/Packets/: CMakeLists.txt  S2C_EntityDead.hpp  S2C_EntityHit.hpp  S2C_EntityNew.hpp  S2C_Error.hpp  S2C_GameEnd.hpp  S2C_Movement.hpp  S2C_Ok.hpp
(+281 files in other folders)
